--- a/PlanetWallet/Resources/7_Settings.storyboard
+++ b/PlanetWallet/Resources/7_Settings.storyboard
@@ -523,6 +523,7 @@
                         <outlet property="lightThemeBtn" destination="pGq-Ky-pEW" id="1B7-BW-7wA"/>
                         <outlet property="naviBar" destination="UfI-eD-RjW" id="fex-Tk-Mud"/>
                         <outlet property="planetView" destination="PCC-kw-0Pt" id="ozC-VM-97w"/>
+                        <outlet property="versionLb" destination="Hs2-sX-laY" id="YQa-dp-qND"/>
                         <segue destination="zxA-kA-L1K" kind="show" identifier="setting_to_planetmanagemnet" id="Wrj-5x-U32"/>
                         <segue destination="Nfh-UR-Y9q" kind="show" identifier="setting_to_detailplanet" id="JlL-Wd-49B"/>
                     </connections>
